--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,10 @@ flutter:
      - family: OpenSans
        fonts:
          - asset: fonts/OpenSans-VariableFont_wdth,wght.ttf
+
+     - family: DMSerifDisplay
+       fonts:
+        - asset: fonts/DMSerifDisplay-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
