--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   carousel_slider: ^4.2.1
   table_calendar: ^3.1.1
+  mysql1: ^0.20.0
+  get: ^4.6.6
+  dio: ^5.4.3+1
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
